--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -5,5 +5,29 @@
 {% endblock %}
 
 {% block content %}
-   <h1>Hello World!</h1>
+    {% if request.user.is_authenticated %}
+        <h1>Hello World!</h1>
+    {% else %}
+        <div class="col-md-6 offset-md-3">
+        <h1>login</h1>
+        <br>
+        <form action="{% url 'home' %}" method="post">
+              {% csrf_token %}
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Username</label>
+                <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username" placeholder="Username">
+{#                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>#}
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" required class="form-control" id="exampleInputPassword1" name="password" placeholder="password">
+              </div>
+{#              <div class="mb-3 form-check">#}
+{#                <input type="checkbox" class="form-check-input" id="exampleCheck1">#}
+{#                <label class="form-check-label" for="exampleCheck1">Check me out</label>#}
+{#              </div>#}
+              <button type="submit" class="btn btn-secondary">Login</button>
+        </form>
+    </div>
+    {% endif %}
 {% endblock %}
