--- a/website/templates/website/navbar.html
+++ b/website/templates/website/navbar.html
@@ -1,36 +1,50 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Django CRM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+{#        <li class="nav-item">#}
+{#          <a class="nav-link active" aria-current="page" href="#">Home</a>#}
+{#        </li>#}
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+{#        <li class="nav-item dropdown">#}
+{#          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
+{#            Dropdown#}
+{#          </a>#}
+{#          <ul class="dropdown-menu">#}
+{#            <li><a class="dropdown-item" href="#">Action</a></li>#}
+{#            <li><a class="dropdown-item" href="#">Another action</a></li>#}
+{#            <li><hr class="dropdown-divider"></li>#}
+{#            <li><a class="dropdown-item" href="#">Something else here</a></li>#}
+{#          </ul>#}
+{#        </li>#}
+
+{#        <li class="nav-item">#}
+{#          <a class="nav-link disabled" aria-disabled="true">Disabled</a>#}
+{#        </li>#}
+      {% if user.is_authenticated %}
           </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      	<form class="d-flex" method="post" action="{% url 'logout' %}">
+          {% csrf_token %}
+    {#        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+            <button class="btn btn-outline-success" type="submit">Logout</button>
+        </form>
+      {% else %}
+
+          <li class="nav-item">
+              <a href="{% url 'home' %}" class="nav-link">Login</a>
+          </li>
+          <li class="nav-item">
+              <a href="{% url 'register' %}" class="nav-link">Register</a>
+          </li>
+          </ul>
+          
+      {% endif %}
     </div>
   </div>
 </nav>
