--- a/website/templates/website/register.html
+++ b/website/templates/website/register.html
@@ -8,10 +8,23 @@
   <div class="col-md-6 offset-md-3">
         <h1>Register</h1>
         <br>
-        <form action="{% url 'home' %}" method="post">
+        <form action="" method="POST">
               {% csrf_token %}
-              {{ register_form }}
-              <button type="submit" class="btn btn-secondary">Login</button>
+              {% if register_form.errors %}
+              	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    Your Form Has Errors
+                    {% for field in register_form %}
+                    	{% if register_form.errors %}
+                    		{{ field.errors }}
+                    	{% endif %}
+                    {% endfor %}
+                <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="alert">
+
+                </button>
+                </div>
+              {% endif %}
+              {{ register_form.as_p }}
+              <button type="submit" class="btn btn-secondary">Register</button>
         </form>
 	</div>
 {% endblock %}
