--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,6 +10,7 @@
         {% endblock %}
     </title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
     {% include 'website/navbar.html' %}
