--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -6,7 +6,38 @@
 
 {% block content %}
     {% if request.user.is_authenticated %}
-        <h1>Hello World!</h1>
+        <h1>RECORDS ...</h1>
+{% if records %}
+<table class="table table-striped table-hover table-bordered ">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Created At</th>
+      <th scope="col">ID</th>
+    </tr>
+  </thead>
+
+      <tbody>
+    {% for record in records %}
+
+        <tr>
+          <td>{{ record.first_name }},{{ record.last_name }}</td>
+          <td>{{ record.email }}</td>
+          <td>{{ record.phone }}</td>
+          <td>{{ record.created_at }}</td>
+          <td><a href="{% url 'record' pk=record.id %}">{{ record.id }}</a></td>
+        </tr>
+    {% endfor %}
+
+      </tbody>
+
+    </table>
+
+{% endif %}
+
+
     {% else %}
         <div class="col-md-6 offset-md-3">
         <h1>login</h1>
